# utf8proc

./: .gitignore  BUILD.bazel  CMakeLists.txt  EXTENSIONS.bzl  MODULE.bazel  WORKSPACE.bazel  utf8proc_data.c
bench/: BUILD.bazel
data/: BUILD.bazel  BUILD.bzl  charwidths.jl  derived_core_properties_splitter.c
lib/: BUILD.bazel
src/: BUILD.bazel
test/: BUILD.bazel  MODULE.bazel  tests.h
