# do not remove
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

UNICODE_VERSION = "15.0.0"

# http_file(
#       name = "normalizationtest",
#       url = "https://www.unicode.org/Public/{}/ucd/NormalizationTest.txt".format(UNICODE_VERSION),
#       # sha256 = "",
#   )

# load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")
# rules_foreign_cc_dependencies(
#     register_preinstalled_tools = True,
#     register_toolchains  = True,
#     # do not build tools from source
#     register_built_tools = False,
# )

# rules_foreign_cc_dependencies()
